--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -2,11 +2,14 @@
 <html>
     <head>         
         <title>Cemetery Listings</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+       <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> -->
+        
         <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
-        <script src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
-         <link rel="icon"  type="image/png"  href="/CemeteryListingsWebApp/resources/images/favicon.ico">
-         
+        <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+        <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
+        <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/plugins/cookies-plugin/jquery.cookie.js"></script>
+        <link rel="icon"  type="image/png"  href="/CemeteryListingsWebApp/resources/images/favicon.ico">
+
         <link rel="stylesheet" href="/CemeteryListingsWebApp/resources/js/jquery-ui.css">
         <script src="/CemeteryListingsWebApp/resources/js/jquery-1.10.2.js"></script>
         <script src="/CemeteryListingsWebApp/resources/js/jquery-ui.js"></script>
@@ -15,7 +18,7 @@
             {
                 $( "#dateOfBirth" ).datepicker();
                 $( "#dateOfDeath" ).datepicker();
-                
+
             });
         </script>
         <script>
@@ -45,19 +48,7 @@
         <div class="dummyHeader"></div>
         <div class="pageWrapper">
             <div class="siteContent">
-                <!--
-                <table width = '90%' align='center'>
-                                <tr><th> </th></tr>
-                                <tr><td>Cemetery Name</td><td><input type="text" name="cemeteryName" id="cemeteryName" placeholder="Cemetery Name" style="width:100%"></td> </tr>
-                                <tr><td>Contact Name </td><td><input type="text" name="contactName" id="contactName" placeholder="Contact Name" style="width:100%"> </td> </tr>
-                                <tr><td>Contact Number </td><td><input type="text" name="contactNumber" id="contactNumber" placeholder="Contact Number" style="width:100%"> </td></tr>
-                                <tr><td>Country </td><td><input type="text" name="country" id="country" placeholder="Country" style="width:100%"> </td></tr>
-                                <tr><td>District </td><td><input type="text" name="district_state" id="district_state" placeholder="District" style="width:100%"> </td></tr>
-                                <tr><td>Location Of Cemetery eg 12.06.12:45.63.89 </td><td><input type="text" name="locationOfCemetery" id="locationOfCemetery" placeholder="Cemetery Location" style="width:100%"> </td></tr>
-                                <tr><td>Province/State</td><td><input type="text" name="province_state" id="province_state" placeholder="Province/State" style="width:100%"></td> </tr>
-                                <tr><td>Town</td><td><input type="text" name="town" id="town" placeholder="Town" style="width:100%"></td> </tr>
-                </table>
-                -->
+               
                     <h1 align ='center'>Submit Listing for approval</h1>
                     <div class="details" style = "width : 100%; margin-left : 5%">
                     <form style="width:55%; margin-left:20%;" id="data">
