--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -46,6 +46,7 @@
      <!--<script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script> -->
         
         <script type="text/javascript">
+             
         	//console.log('hi');
                 $('#logout').click(function(){
                 localStorage.username = "";
@@ -101,7 +102,7 @@
                                     // error handler
                                     console.log('fail');
                                     console.log(jqXHR);
-                                    console.log('fail ' + status.code);
+                                    console.log('fail ' + status);
                                 }
                              });
 
