--- a/src/main/webapp/WEB-INF/views/adminApprovedListingsDetails.html
+++ b/src/main/webapp/WEB-INF/views/adminApprovedListingsDetails.html
@@ -283,7 +283,7 @@
                                                 "imageOfBurialSite": $('#imageURL').val(),
                                                 "lastKnownContactName":$('#lastKnownContactName').val(),
                                                 "lastKnownContactNumber":$('#lastKnownContactNumber').val(),
-                                                "cemeteryID": localStorage.selectedCemeteryID,//could be the issue
+                                            //    "cemeteryID": localStorage.selectedCemeteryID,//could be the issue
                                                 "subscriberApprovedID":"",
                                                 "subscriberSubmitID":$('#subscriberSubmitID').val()}),
                                                 //"names":["a", "b"]}),
